# thalia-ocaml

./: .gitignore  .ocamlformat  CODE_OF_CONDUCT.md  README.md  dune-project
grammars/: thalia.ebnf
lib/: automaton.ml  automaton.mli  char.ml  char.mli  dune  lexer.ml  lexer.mli  location.ml  location.mli  monad.ml  monad.mli  result.ml  result.mli  span.ml  span.mli  stream.ml  stream.mli  token.ml  token.mli
